<resources>
    <string name="app_name">golf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rank">Rank</string>
    <string name="menu_practice">Slideshow</string>
    <string name="menu_match">Match</string>
    <string name="menu_login">Login</string>
    <string name="close">close</string>
</resources>