<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.golf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rank"
        android:name="com.example.golf.ui.rank.RankFragment"
        android:label="@string/menu_rank"
        tools:layout="@layout/fragment_rank" />

    <fragment
        android:id="@+id/nav_practice"
        android:name="com.example.golf.ui.practice.PracticeFragment"
        android:label="@string/menu_practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/nav_match"
        android:name="com.example.golf.ui.match.MatchFragment"
        android:label="@string/menu_match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.golf.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

</navigation>